# CrystalGNNs

./: .gitignore  MANIFEST.in  pyproject.toml  setup.py
src/crystalgnns/crystal_preprocessing/: crystal_preprocessors.py  graph_builder.py
src/crystalgnns/datasets/: matbench_datasets.py  utils.py
src/crystalgnns/graph_dataset_tools/: graph_tuple.py  line_graph.py  model_preprocessors.py
src/crystalgnns/kgcnn_layers/: preprocessing_layers.py
src/crystalgnns/kgcnn_layers/embedding_layers/: edge_embedding.py
src/crystalgnns/kgcnn_layers/graph_network/: graph_networks.py
src/crystalgnns/models/cgcnn/: cgcnn.py  cgcnn_asu.py
src/crystalgnns/models/dimenet/: dimenet_pp.py  dimenet_pp_asu.py
src/crystalgnns/models/graph_network/: graph_network.py  graph_network_.py  graph_network_asu.py  graph_network_configurator.py
src/crystalgnns/models/megnet/: megnet.py
src/crystalgnns/models/nested_graph_network/: nested_graph_network_asu.py
src/crystalgnns/models/schnet/: schnet.py  schnet_asu.py  schnet_extended_asu.py
src/crystalgnns/periodic_table/: periodic_table.py
