[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"crystalgnns" = ["*.csv"]

[project]
name = "crystalgnns"
version = "0.0.2"
requires-python = ">=3.7"
dependencies = [
        'networkx',
        'tensorflow==2.11',
        'pymatgen',
        'pyxtal',
        'kgcnn<3.1.0'
]
